--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@types/ramda": "^0.27.36",
+    "ramda": "^0.27.1"
   }
 }
